css/style.css
/* ... */
h2 {
    font-size: 7vmin;
    line-height: 7vmin;
}

h3 {
    font-size: 5vmin;
    line-height: 5vmin;
}

h4 {
    font-size: 4vmin;
    line-height: 4vmin;
}

h5 {
    font-size: 3vmin;
    line-height: 3vmin;
}

h6 {
    font-size: 2.5vmin;
    line-height: 2.5vmin;
}


p {
    font-size: 2vmin;
    line-height: 2vmin;
}


.theloopfont {color: #d9ac7d; font-weight:bold;}
.bicyclelanefont {color: #1fa375; font-weight:bold;}
.highstressfont {color: #a42323; font-weight:bold;}
.accidentsfont {color: #a11717; font-weight:bold;} /*{color: #d22828;}*/
.neighborhoodroadfont {color: #62adf3; font-weight:bold;}
.lowstressfont {color: #76a4e0; font-weight:bold;}

#text > section {
    background-color: rgb(255,255,255,0.5);
    padding: 10px;
    border: solid 3px #A0A0A0;
}

#text > #satallitebikelanes, #text > #satallite {
    color:white;
    background-color: rgb(0,0,0,0.3);
    }

section {
    margin-bottom:100vh;
    line-height: 25px;
    /*border-bottom: 1px solid #ddd; Removed because I didn't like the line between text sections*/
    font-size: 13px;
}

section.active {
    opacity: 1;
}
section:last-child {
    border-bottom: none;
    margin-bottom: 200px;
}

#maininfo {
    position: fixed;
    bottom: 2vw;
    right: 1vw; 
    z-index: 2;
    min-width: 150px;
    max-width: 150px;
}

#maininfo > div {
    overflow-x: hidden;
    font-size: 10px;
    min-height: 65px;
    max-height: 65px;
    border-right: solid 3px #A0A0A0;
    border-left: solid 3px #A0A0A0;
    border-bottom: solid 3px #A0A0A0;
    background-color: rgba(255, 255, 255, .4);
    text-align: center; 
    /*font-weight:bold;*/
    /*overflow-y: scroll;*/`
}

#mapPosition {
    border-top: solid 3px #A0A0A0;;
    word-wrap: break-word;
}

textarea {
    background-color: red;
    z-index: 2;
    position: relative;
}

#instructions {
    /*height: 50px;
    min-height: 80px;
    position: relative;
    text-align: left;
    margin: 10;
    padding: 15px;*/
    width: auto;
    /*scroll after max height is reached*/
}

#geojsonbox {
    /*height: 30px;
    min-height: 80px;
    position: relative;
    padding: 15px;
    text-align: left;
        margin: 10;*/
        width: auto;
    background-color: rgba(255, 255, 255, .4);
    font-size: 13px;
    /*scroll after max height is reached*/
    word-wrap: break-word;
}


#scrolltest {
    font-size:25px;
    background-color:red;
}

#testbutton {
    position: absolute;
    left:600px;
    z-index: 4;
}


/* Landing Page Stuff */
/*!
 * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Global Styles */
    .fly {
           display: block;
        position: relative;
        /* width:20%;   bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
        /*margin: 0px auto;bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
        height: 40px;
        /*padding: 10px;bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
        border: none;
        border-radius: 3px;
        font-size: 12px;
        text-align: center;
        color: #fff;
        background: #ee8a65;
    }


#bootstrapoverrides .container-fluid {
  padding-right:0px;
  padding-left:0px;
}
#bootstrapoverrides .row-fluid {
  padding-right:0px;
  padding-left:0px;
}

#bootstrapoverrides .row {
  padding-right:0px;
  padding-left:0px;
}

.no-gutter > [class*='col-'] {
    padding-right:0;
    padding-left:0;
}

.text-vertical-center {
    text-align: center;
    vertical-align: middle;
}

.vcenter {
    display: inline-block;
    vertical-align: middle;
    float: none;
}

.nowrap {
    white-space: nowrap;
    overflow: hidden;
}

#enter > a > h5 {
    margin:0px;  /*this vertically-aligns the "Click to Enter" text in the middle of the orange button*/
}

#navigation {
    background-color:red;
    position:fixed;
    z-index: 1;
}

#contactinfo > div.wow.fadeInLeft > h1 {
    font-size:3.5em;
}

.infobox {
  background-color:rgba(255,255,255,.5);
  border-style: solid;
  border-width:2px;
  border-color:#606060;
}

#contactinfo {
    margin-top:200px;
    margin-bottom:50px;
    padding: 30px 10px; */
}

#mainnavcontent {
    padding-top:50px;
    height:auto;
    min-height:800px;
    padding-bottom:50px;
    margin-bottom:25px;
    background-color:rgba(255,255,255,.8);
}



#contactinfofooter {
  margin-bottom:500px;
}

/*the unique styling to get the "Click to Learn More" Circle around the double-down arrow
#enter > a {
  margin-bottom:100px;
  color:#606060;
    width: 70px;
    height: 70px;
    margin-top: 15px;
    padding: 7px 16px;
    border: 2px solid #606060;
    border-radius: 35px;
    font-size: 40px;
    color: #606060;
    background: 0 0;
}*/



/* Social Media Buttons */
.grow {
transition: all .1s ease-in-out; }
.grow:hover {
transform: scale(1.3);
}
.social-fb, .social-tw, .social-gp, .social-em, .social-rm, .social-sk {
color: #606060;
padding:10px;
z-index: 2;}

.social-fb:hover {
color: #3B5998;}
.social-tw:hover {
color: #4099FF;}
.social-gp:hover {
color: #1D9833;}
.social-em:hover {
color: #f39c12;}
.social-rm:hover {
color: #d34836;}
.social-sk:hover {
color: #d36836;}


/* Custom Horizontal Rule */
hr.small {
    max-width: 100px;
    margin-bottom:10px;
    border-top-color:red;

}
hr.medium {
    max-width: 300px;
    margin-bottom: 10px;
    border-top-color:black;
}

/*CSS necessary for the affix to work*/
.affix {
  top:0px;
  display: inline-block;
}

#affixeditem > li {
  display:block;
  font-size:.75vm;
}

.wrapper {
  min-height:106px;
}

#blankwhitespace {
width:100%;
background-color:white;
}


#mapid{
  position:fixed;
  z-index: -1;
  top:0;
  bottom:0;
  width:100%;
  height:100%;
}
/* ... */

